# ResumeAnalyzer

./: .env  .env.example  .gitignore  .slugignore  AGENTS.md  Dockerfile  README.md  app.json  export_resumes.py  exported_resumes.json  main.py  pyproject.toml  requirements.txt  test.ipynb
.agents/: mcp_config.json
api/: app.py
data/: sample_output.json
models/: README.md
notebooks/: test.ipynb  yashpwr.ipynb
src/: __init__.py
src/database/: __init__.py  db.py
src/downloader/: __init__.py  downloader.py
src/embedding/: __init__.py  embedder.py  embedding_builder.py
src/extractor/: __init__.py  extractor.py
src/parser/: __init__.py  parser.py
src/pipeline/: __init__.py  resume_parser.py
src/resumeanalyzer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/schemas/: __init__.py  pydantic_models.py
tests/: __init__.py  test_api_embedding.py  test_database.py  test_downloader.py  test_embedder.py  test_embedding_builder.py  test_extractor.py  test_parser.py  test_pipeline.py
