[project]
name = "resumeanalyzer"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "pydantic>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.0.0",
    "requests>=2.28.0",
    "spacy>=3.7.0",
    "PyMuPDF>=1.23.0",
    "en-core-web-sm@https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
